--- a/.org/readme.org
+++ b/.org/readme.org
@@ -44,6 +44,7 @@ A containerized [[http://www.unidata.ucar.edu/software/thredds/current/tds/][THR
    :END:
 
 - =unidata/thredds-docker:latest=
+- =unidata/thredds-docker:4.6.20=
 - =unidata/thredds-docker:4.6.19=
 - =unidata/thredds-docker:4.6.18=
 - =unidata/thredds-docker:4.6.17=
