--- a/.org/readme.org
+++ b/.org/readme.org
@@ -359,7 +359,7 @@ At this point, we are done setting up the TDS with docker. To navigate to this i
    :CUSTOM_ID: h46102A0D
    :END:
 
-The [[https://docs.unidata.ucar.edu/tds/5.2/userguide/tdm_ref.html][THREDDS Data Manager]] or TDM is an application that works in close conjunction with the TDS and is referenced in the [[file:docker-compose.yml][docker-compose.yml]] in this repository. The TDM Docker container [[https://github.com/Unidata/tdm-docker][is in its own repository]] where you can find instructions on how to run it.
+The [[https://docs.unidata.ucar.edu/tds/5.2/userguide/tdm_ref.html][THREDDS Data Manager]] (TDM) creates indexes for GRIB featureCollections, in a process separate from the TDS. It is a specialized utility typically employed in scenarios where the TDS is serving real-time data from the Unidata IDD (e.g., GFS Quarter Degree Analysis) and is referenced in the [[file:docker-compose.yml][docker-compose.yml]] in this repository. In most scenarios, you can comment out the TDM section. The TDM Docker container [[https://github.com/Unidata/tdm-docker][is in its own repository]] where you can find instructions on how to run it.
 
 ** Citation
    :PROPERTIES:
